# circom_civer

./: README.md  transform_smt2_to_cvc5.py
circom/: Cargo.toml
circom/src/: execution_user.rs  input_user.rs  main.rs  parser_user.rs
circom_algebra/src/: algebra.rs
compiler/src/hir/: component_preprocess.rs  merger.rs
compiler/src/intermediate_representation/: translate.rs
constraint_generation/: Cargo.toml
constraint_generation/src/: compute_constants.rs  execute.rs  lib.rs
constraint_generation/src/environment_utils/: environment.rs  slice_types.rs
constraint_generation/src/execution_data/: executed_program.rs  executed_template.rs  filters.rs  type_definitions.rs
dag/: Cargo.toml
dag/src/: lib.rs  map_to_constraint_list.rs  tags_checking.rs
mkdocs/docs/getting-started/: civer.md
parser/src/: include_logic.rs  lang.lalrpop  lib.rs  syntax_sugar_remover.rs
program_structure/src/abstract_syntax_tree/: ast.rs  expression_impl.rs  statement_builders.rs  statement_impl.rs
program_structure/src/program_library/: error_code.rs  mod.rs  program_archive.rs  program_merger.rs  specification_data.rs
type_analysis/src/: check_types.rs
type_analysis/src/analyzers/: functions_free_of_template_elements.rs  symbol_analysis.rs  type_check.rs
type_analysis/src/decorators/: constants_handler.rs  type_reduction.rs
