[package]
name = "dag"
version = "2.1.5"
authors = ["Costa Group UCM","iden3"]
edition = "2018"

[dependencies]
constraint_list = { path = "../constraint_list" }
constraint_writers = { path = "../constraint_writers" }
circom_algebra = { path = "../circom_algebra" }
program_structure = { path = "../program_structure" }
json = "0.12.4"
wait-timeout = "0.2"
num-traits = "0.2.6"
num-bigint-dig = "0.6.0"
z3 = {version="0.11.2", features = ["static-link-z3"]}
regex = "1"
rand = "0.9.2"
